--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
     </div>
     
     <!-- Search Bar -->
-  <!-- Search Bar -->
-    <div class="p-4" id="search-bar">
+   <div class="p-4" id="search-bar">
         <div class="relative">
-            <i id="microphone-icon" class="fas fa-microphone absolute left-3 top-3 text-green-500 cursor-pointer"></i>
+            <i id="voice-microphone-icon" class="fas fa-microphone absolute left-3 top-3 text-green-500 cursor-pointer"></i>
             <div class="absolute left-8 top-3 h-6 border-r border-gray-300"></div>
             <input class="w-full p-2 pl-12 border border-blue-500 rounded-full italic text-red-500 font-bold text-center" id="search-input" maxlength="15" placeholder="Shop for jewelry" type="text"/>
             <i class="fas fa-search absolute right-3 top-3 text-green-500 font-bold"></i>
@@ -69,12 +68,12 @@
         </div>
     </div>
 
-    <!-- Voice Modal -->
-    <div id="voice-modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden">
+  
+   <div id="voice-modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden">
         <div class="bg-white p-6 rounded-lg shadow-lg text-center">
             <i class="fas fa-microphone text-green-500 text-4xl mb-4"></i>
-            <p class="mb-4" id="status-message">Click "Start" to begin recording</p>
-            <button id="start-recording" class="bg-blue-500 text-white px-4 py-2 rounded-full">Start</button>
+            <p class="mb-4" id="voice-status-message">Click "Start" to begin recording</p>
+            <button id="voice-start-recording" class="bg-blue-500 text-white px-4 py-2 rounded-full">Start</button>
         </div>
     </div>
     
@@ -1045,11 +1044,11 @@ function showCategory(category) {
 
 
 
-       document.addEventListener('DOMContentLoaded', function() {
-            const microphoneIcon = document.getElementById('microphone-icon');
+         document.addEventListener('DOMContentLoaded', function() {
+            const microphoneIcon = document.getElementById('voice-microphone-icon');
             const voiceModal = document.getElementById('voice-modal');
-            const startButton = document.getElementById('start-recording');
-            const statusMessage = document.getElementById('status-message');
+            const startButton = document.getElementById('voice-start-recording');
+            const statusMessage = document.getElementById('voice-status-message');
             let recognition;
 
             microphoneIcon.addEventListener('click', function() {
