--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     .video-popup.active {
       display: flex;
     }
+
+       .swal2-popup {
+            border: 4px solid neon;
+            box-shadow: 0 0 10px neon, 0 0 20px neon, 0 0 30px neon, 0 0 40px neon;
+        }
   </style>
 
  </head>
-<body class="bg-gray-100 overflow-x-hidden">
+<body class="flex items-center justify-center min-h-screen bg-gray-100 overflow-x-hidden">
+
     <div class="flex items-center justify-between p-4 relative bg-white shadow-md">
         <div class="relative">
             <img alt="Empty Profile Icon" class="w-10 h-10 rounded-full cursor-pointer" height="40" id="profile-icon" onclick="toggleProfilePopup()" src="https://storage.googleapis.com/a1aa/image/dW_whs8jHB6LZufF8bDlqLCkXeHz4aR-gsBhtYbTVJ8.jpg" width="40"/>
@@ -1109,8 +1115,6 @@ function showCategory(category) {
      document.addEventListener('DOMContentLoaded', function() {
             const now = new Date();
             const hours = now.getHours();
-            const lastPopupTime = localStorage.getItem('lastPopupTime');
-            const sixHoursInMillis = 6 * 60 * 60 * 1000;
             let greeting = '';
 
             if (hours >= 6 && hours < 12) {
@@ -1121,19 +1125,18 @@ function showCategory(category) {
                 greeting = 'Hello';
             }
 
-            if (!lastPopupTime || (now - new Date(lastPopupTime)) > sixHoursInMillis) {
-                Swal.fire({
-                    title: `<span style="color: red;">trendy_tides</span><br>${greeting}`,
-                    text: `The current time is ${now.toLocaleTimeString()}`,
-                    iconHtml: '',
-                    showClass: {
-                        popup: 'swal2-no-icon'
-                    },
-                    confirmButtonText: 'OK'
-                });
-
-                localStorage.setItem('lastPopupTime', now);
-            }
+            Swal.fire({
+                title: `<span style="color: red;">trendy_tides</span><br>${greeting}`,
+                text: `The current time is ${now.toLocaleTimeString()}`,
+                iconHtml: '',
+                showClass: {
+                    popup: 'swal2-no-icon'
+                },
+                customClass: {
+                    popup: 'neon-border'
+                },
+                confirmButtonText: 'OK'
+            });
         });
   </script>
  </body>
