--- a/index.html
+++ b/index.html
@@ -1711,7 +1711,7 @@
             },
             ne: {
                 // Header
-                'header-title': 'ग्रिनभिलेज',
+                'header-title': 'Larikatta',
                 'language-text': 'English',
                 
                 // Marquee
@@ -4880,3 +4880,4 @@ updateLanguage = function(lang) {
     </script>
 </body>
 </html>
+
